scenario-01-simple-application/manifests/hello-world-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world
  labels:
    app: hello-world
    service: hello-world
spec:
  ports:
    - port: 80
      targetPort: 5678
      name: http
  selector:
    app: hello-world
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world-v1
  labels:
    app: hello-world
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-world
      version: v1
  template:
    metadata:
      labels:
        app: hello-world
        version: v1
    spec:
      containers:
        - name: hello-world
          image: docker.io/hashicorp/http-echo:0.2.3
          args:
            - "-text=Hello World from Istio v1"
          ports:
            - containerPort: 5678
          resources:
            requests:
              cpu: "100m"
              memory: "64Mi"
            limits:
              cpu: "200m"
              memory: "128Mi"
