scenario-01-simple-application/manifests/hello-world-gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: hello-world-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: hello-world
spec:
  hosts:
    - "*"
  gateways:
    - hello-world-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: hello-world
            port:
              number: 80
